// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
    "executionParams": "0x00",
    "executor": {
      "address": "0x6241b5c89350bb3c465179706cf26050ea32444f",
      "index": 0,
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0xf3e55d22845689be3e062975444d09799e522a6c",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 31337,
      "name": "snapshot-x",
      "verifyingContract": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
      "version": "1",
    },
    "message": {
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "index": 0,
        "params": "0x00",
      },
      "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "salt": 0,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
    },
    "signature": "0x1ae82f3ec1ba10c6eaf4924217fcd0f2833fd5857d2c0879948acff503df7047129f2d55efc99e1dc462ac439ba6ea708b0cc501fa8f8ee1a65c13fe4f0772861b",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Propose": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "author",
          "type": "address",
        },
        {
          "name": "metadataUri",
          "type": "string",
        },
        {
          "name": "executionStrategy",
          "type": "IndexedStrategy",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
    "choice": 1,
    "metadataUri": "",
    "proposal": 1,
    "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
    "strategies": [
      {
        "address": "0xf3e55d22845689be3e062975444d09799e522a6c",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "domain": {
      "chainId": 31337,
      "name": "snapshot-x",
      "verifyingContract": "0x277f388b77cd36fff1c0e976c49a7c54413a449a",
      "version": "1",
    },
    "message": {
      "choice": 1,
      "proposalId": 1,
      "space": "0x6d5608420702714a6c8168ec9c70706e8d1cf641",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": "0x00",
        },
      ],
      "voteMetadataUri": "",
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": "0x4b98c72344bc9b003a44b74af667e328c8c1a5390d7a6ef81269138abd4bd23c1748dd4aa038c98e8885676ec0ae9b3a669067aee952b3488b3bc0a429460fdb1b",
    "types": {
      "IndexedStrategy": [
        {
          "name": "index",
          "type": "uint8",
        },
        {
          "name": "params",
          "type": "bytes",
        },
      ],
      "Vote": [
        {
          "name": "space",
          "type": "address",
        },
        {
          "name": "voter",
          "type": "address",
        },
        {
          "name": "proposalId",
          "type": "uint256",
        },
        {
          "name": "choice",
          "type": "uint8",
        },
        {
          "name": "userVotingStrategies",
          "type": "IndexedStrategy[]",
        },
        {
          "name": "voteMetadataUri",
          "type": "string",
        },
      ],
    },
  },
}
`;
